Fix alignment in py book, py lecture and about us pages.

--- a/Exercise_3/css/styles.css
+++ b/Exercise_3/css/styles.css
@@ -8,7 +8,6 @@ body {
     line-height: 22px;
     font-family: 'My_web_font', Fallback, sans-serif;
     background-color:rgb(193, 221, 249);
-    overflow-x: hidden;
     display: grid;
     grid:"h h h"
          "n b b"
